Fix wrong title name

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <td>
                 <i class="fa-solid fa-clock fa-sm"></i> <span class="fw-lighter small">10:00〜10:25</span><br />
                 <a href="https://fortee.jp/jjug-ccc-2022-spring/proposal/fbb1e886-d51a-4052-b284-6e9c80f132ea"
-                  target="_blank" class="link-dark">ß
+                  target="_blank" class="link-dark">
                   <span class="small">AWS Batch × Spring Batch でクラウド最適なバッチを構築した話</span>
                 </a>
               </td>
