アンカンファレンス列を追加した

--- a/index.html
+++ b/index.html
@@ -97,8 +97,20 @@
                     data-bs-toggle="tooltip" data-bs-placement="bottom" title="Click to play"><i
                       class="fa-solid fa-circle-play fa-1x fa-fade" style="color: white;"></i> Track D <span
                       class="small">(#jjug_ccc_d)</span></button></th>
+                <th class="text-center" style="width: 15%"><div>アンカンファレンス</div><div
+                      class="small" style="font-weight: normal">(#jjug_ccc_unconf)</div></th>
               </tr>
             </thead>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>
+                <i class="fa-solid fa-clock fa-sm"></i> <span class="fw-lighter small">09:30〜10:00</span><br />
+                <span class="small">日本Javaユーザーグループ2022年度定期総会</span>
+              </td>
+            </tr>
             <tr>
               <td>
                 <i class="fa-solid fa-clock fa-sm"></i> <span class="fw-lighter small">10:00〜10:25</span><br />
