タイムテーブルに地方JUGイベントを追加した

--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
               <td><span class="small">休憩</span></td>
               <td><span class="small">休憩</span></td>
               <td><span class="small">休憩</span></td>
+              <td><span class="small"></span></td>
             </tr>
             <tr>
               <td rowspan="2">
@@ -317,6 +318,10 @@
                   target="_blank" class="link-dark">
                   <span class="small">脱二重メンテナンス！ドキュメント自動生成への道</span>
                 </a>
+              </td>
+              <td rowspan="2">
+                <i class="fa-solid fa-clock fa-sm"></i> <span class="fw-lighter small">15:00〜</span><br />
+                  <span class="small">地方JUG最近どうよ！？座談会 </span>
               </td>
             </tr>
             <tr>
